<resources>

    <!-- Main application -->
    <string name="app_name">Lunch List</string>
    <string name="title_activity_lunch_list">Lunch List</string>
    <string name="ok">OK</string>
    <string name="package_name">csci498.thevoiceless.lunchlist</string>
    
    <!-- Menus -->
    <string name="menu_add_restaurant">Add Restaurant</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_open_rss">Open RSS Feed</string>
    <string name="menu_action_save">Save</string>
    <string name="menu_set_location">Set Location</string>
    <string name="menu_show_map">Show Map</string>
    <string name="menu_help">Help</string>
    
    <!-- Restaurants list -->
    <string name="no_restaurants">No restaurants.</string>
    
    <string name="placeholder_title">Title</string>
    <string name="placeholder_textview">TextView</string>
    
    <!-- Restaurant form -->
    <string name="label_name">Name:</string>
    <string name="label_addr">Address:</string>
    <string name="label_type">Type:</string>
    <string name="label_loc">Location:</string>
    <string name="label_notes">Notes:</string>
    <string name="label_feed">Feed:</string>
    
    <string name="hint_notes">Notes</string>
    <string name="hint_feed">Feed URL</string>
    
    <string name="radio_takeout">Take-Out</string>
    <string name="radio_sitdown">Sit-Down</string>
    <string name="radio_delivery">Delivery</string>
    
    <string name="loc_not_set">Select \"Set Location\" from the menu</string>
    
    <string name="name_required">You must enter a name for the restaurant</string>
    <string name="loc_success">Location acquired</string>
    <string name="loc_attempting">Getting GPS location…</string>
    <string name="delete_success">Restaurant deleted successfully</string>
    <string name="delete_failure">Could not delete restaurant</string>
    <string name="no_connection">No internet connection available</string>
    <string name="exception">Exception!</string>
    
    <!-- Feed Service -->
    <string name="feed_service">FeedService</string>
    
    <!-- Widget Service -->
    <string name="widget_service">WidgetService</string>
    <string name="widget_no_restaurants">No restaurants!</string>
    
    <!-- Logging -->
    <string name="activity_feed">FeedActivity</string>
    <string name="activity_lunchlist">LunchList</string>
    <string name="exception_parsing_feed">Exception while parsing feed</string>
    
    <!-- Maps API Key -->
    <string name="maps_debug_api_key">0aX25Iba4pIVmqJ0–8LSFuO97UfYzpb0Rlvh9FA</string>
    
    <!-- Preferences -->
    <string name="key_sort_order">sort_order</string>
    <string name="key_alarm">alarm</string>
    <string name="key_alarm_time">alarm_time</string>
    <string name="key_alarm_use_notification">use_notification</string>
    <string name="key_alarm_ringtone">alarm_ringtone</string>
    
    <string name="pref_sort_order_title">Sort Order</string>
    <string name="pref_sort_order_summary">Choose the order for the list of restaurants</string>
    <string name="pref_sort_dialog">Choose a sort order</string>
    <string name="pref_alarm_title">Sound a Lunch Alarm</string>
    <string name="pref_alarm_summary">Enable if you want to be notified when it\'s time for lunch</string>
    <string name="pref_alarm_time_title">Lunch Alarm Time</string>
    <string name="pref_alarm_time_summary">Set the time for the lunch alarm</string>
    <string name="pref_default_alarm_time">12:00</string>
    <string name="pref_alarm_use_notification_title">Display Notification</string>
    <string name="pref_alarm_use_notification_summary">Enable to display a notification in the status bar, or disable for a full-screen notification</string>
    <string name="pref_button_set">Set</string>
    <string name="pref_button_cancel">Cancel</string>
    <string name="pref_alarm_ringtone_title">Alarm Ringtone</string>
    <string name="pref_alarm_ringtone_summary">Set the ringtone to be used for lunch alarms</string>
    
    <string name="alarm_message">Time for lunch!</string>
    
    <!-- Notifications -->
    <string name="notification_lunch_ticker">Time for lunch!</string>
    <string name="notification_lunch_content">It\'s time for lunch! Hungry?</string>

</resources>