<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item
        android:id="@+id/menu_save"
        android:icon="@drawable/ic_menu_save"
        android:title="@string/menu_action_save" />
    
    <item
        android:id="@+id/menu_location"
        android:icon="@drawable/ic_menu_compass"
        android:title="@string/menu_set_location" />
    
    <item
        android:id="@+id/menu_map"
        android:icon="@drawable/ic_menu_mapmode"
        android:title="@string/menu_show_map" />

    <item
        android:id="@+id/menu_feed"
        android:icon="@drawable/ic_menu_share"
        android:title="@string/menu_open_rss" />
    
    <item
        android:id="@+id/menu_help"
		android:title="@string/menu_help"
		android:icon="@drawable/ic_menu_help" />

</menu>